; ModuleID = '/home/carl/AnghaBench/openssl/providers/common/extr_provider_err.c_ERR_load_PROV_strings.c'
source_filename = "/home/carl/AnghaBench/openssl/providers/common/extr_provider_err.c_ERR_load_PROV_strings.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@PROV_str_reasons = common dso_local global %struct.TYPE_3__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ERR_load_PROV_strings() #0 {
  %1 = load %struct.TYPE_3__*, %struct.TYPE_3__** @PROV_str_reasons, align 8
  %2 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i64 0
  %3 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %2, i32 0, i32 0
  %4 = load i32, i32* %3, align 4
  %5 = call i32* @ERR_reason_error_string(i32 %4)
  %6 = icmp eq i32* %5, null
  br i1 %6, label %7, label %10

7:                                                ; preds = %0
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** @PROV_str_reasons, align 8
  %9 = call i32 @ERR_load_strings_const(%struct.TYPE_3__* %8)
  br label %10

10:                                               ; preds = %7, %0
  ret i32 1
}

declare dso_local i32* @ERR_reason_error_string(i32) #1

declare dso_local i32 @ERR_load_strings_const(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
